--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Library",
   "version": "0.1.0",
+  "homepage": "https://KauhareniaNastassia.github.io/Library",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -13,6 +14,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
     "axios": "^1.3.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -29,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
