--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "axios": "^1.3.3",
     "date-fns": "^2.29.3",
     "gh-pages": "^5.0.0",
+    "mask": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-text-mask": "^5.5.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.3",
     "swiper": "^9.0.5",
+    "text": "^0.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^1.0.2"
@@ -57,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-text-mask": "^5.4.11"
   }
 }
