--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.3",
+    "simple-crypto-js": "^3.0.1",
     "swiper": "^9.0.5",
     "text": "^0.1.0",
     "typescript": "^4.4.2",
